zetasql/analyzer/testdata/anonymization_disabled.test
# Anonymization query without the feature flag turned on
[default language_features=NONE]
select with anonymization sum() from table;
--
ERROR: Unexpected keyword WITH [at 1:8]
select with anonymization sum() from table;
       ^
==

# Anonymization query without the feature flag turned on
select anon_sum() from SimpleTypes;
--
ERROR: Function not found: anon_sum [at 1:8]
select anon_sum() from SimpleTypes;
       ^
==

# Anonymization query without the feature flag turned on
select anon_avg() from SimpleTypes;
--
ERROR: Function not found: anon_avg; Did you mean afn_agg? [at 1:8]
select anon_avg() from SimpleTypes;
       ^
